--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -10,7 +10,7 @@ jobs:
       matrix:
         os:
           - ubuntu-latest
-          - maxOS-latest
+          - macOS-latest
           - windows-latest
     steps:
       - name: Setup Golang Environment
