--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -17,12 +17,16 @@ jobs:
         uses: actions/setup-go@v1
         with:
           go-version: 1.13
+
       - name: Checkout
         uses: actions/checkout@v2
-#      - name: Lint
-#        run: |
-#          GO111MODULE=off GOBIN=$(pwd)/bin go get golang.org/x/lint/golint
-#          bin/golint -set_exit_status ./...
-#        if: "matrix.os == 'ubuntu-latest' || matrix.os == 'macOS-latest'"
+
       - name: Run Tests
         run: make test
+
+      - name: Store report
+        uses: actions/uploard-artifact@v1
+        if: always()
+        with:
+          name: test-report
+          path: build/test-report.html
