httpmon-5 refactoring - upload report for each os.

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -28,5 +28,5 @@ jobs:
         uses: actions/upload-artifact@v1
         if: always()
         with:
-          name: test-report
+          name: test-report-${{ matrix.os }}
           path: build/test-report.html
