--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -22,9 +22,10 @@ jobs:
         uses: actions/checkout@v2
 
       - name: Install gomock
-        run:  GO111MODULE=on go get github.com/golang/mock/mockgen@latest
+        run:  go get github.com/golang/mock/mockgen@latest
         env:
           GOPATH: ${{ runner.temp }}/go
+          GO111MODULE: on
 
       - name: Run Tests
         run: make test
