httpmon-5 refactoring - add getUseCase test

--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -32,6 +32,11 @@ jobs:
         env:
           GOPATH: ${{ runner.temp }}/go
 
+      - name: Generate coverage
+        run: make coverage
+        env:
+          GOPATH: ${{ runner.temp }}/go
+
       - name: Store report
         uses: actions/upload-artifact@v1
         if: always()
