--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -34,6 +34,7 @@ jobs:
 
       - name: Generate coverage
         run: make coverage
+        if: always()
         env:
           GOPATH: ${{ runner.temp }}/go
 
